Add support for d3.js bubble chart and fixes

--- a/app/partials/analysis.html
+++ b/app/partials/analysis.html
@@ -1,8 +1,7 @@
 <ul class="menu">
-    <li><a href="#/twittgular">Feed</a></li>
+    <li><a href="#/fbgular">Feed</a></li>
     <li><a href="#/analysis">Analysis</a></li>
 </ul>
-
-
-
-<h1>Placeholder for bubble chart</h1>
+<h1>d3.js Bubble Chart</h1>
+<div id="chart">
+</div>
