--- a/app/partials/mainView.html
+++ b/app/partials/mainView.html
@@ -1,5 +1,5 @@
 <ul class="menu">
-    <li><a href="#/twittgular">Feed</a></li>
+    <li><a href="#/fbgular">Feed</a></li>
     <li><a href="#/analysis">Analysis</a></li>
 </ul>
 
